--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Welcome</title>
   </head>
   <body>
-    <h1>Привіт, світ!</h1>
+    <h1>Привіт друже, світ!</h1>
     <p>Це наш перший сайт.</p>
   </body>
 </html>
